<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/halaman_detail"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailUser">

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="username" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="16dp"
                tools:src="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/img_detail_photo"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sumrepository"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/repository"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_followers"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/followers"
                android:orientation="vertical"
                tools:ignore="NotSibling">

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_following"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/user_logo"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Name:" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/company_ilustration"
                    android:src="@drawable/company" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Company: " />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/pin"
                    android:src="@drawable/pin" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Location:" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>